--- a/index.html
+++ b/index.html
@@ -232,17 +232,20 @@
         <div class="flex-child move_to_bf-general">
           General
         </div>
-        <div class="flex-child move_to_bf-policiales">
-          Policiales
-        </div>
         <div class="flex-child move_to_bf-nacionales">
           Nacionales
+        </div>
+        <div class="flex-child move_to_bf-mundo">
+          Mundo
         </div>
         <div class="flex-child move_to_bf-politica">
           Política
         </div>
         <div class="flex-child move_to_bf-misiones">
           Misiones
+        </div>
+        <div class="flex-child move_to_bf-policiales">
+          Policiales
         </div>
         <div class="flex-child move_to_bf-deportes">
           Deportes
@@ -272,7 +275,7 @@
           Profesionales
         </div>
         <div class="flex-child move_to_bf-madiakit">
-          MediaKit
+          Media Kit
         </div>
       </div>
       </div>
@@ -290,10 +293,11 @@
             <div class="bf_intro_container">
 
               <div class="std_line_44px_left padding_left_10px bgc-0001 move_to_bf-general">General</div>
-              <div class="std_line_44px_left padding_left_10px bgc-0001 move_to_bf-policiales">Policiales</div>
               <div class="std_line_44px_left padding_left_10px bgc-0001 move_to_bf-nacionales">Nacionales</div>
+              <div class="std_line_44px_left padding_left_10px bgc-0001 move_to_bf-mundo">Mundo</div>
               <div class="std_line_44px_left padding_left_10px bgc-0001 move_to_bf-politica">Política</div>
               <div class="std_line_44px_left padding_left_10px bgc-0001 move_to_bf-misiones">Misiones</div>
+              <div class="std_line_44px_left padding_left_10px bgc-0001 move_to_bf-policiales">Policiales</div>
               <div class="std_line_44px_left padding_left_10px bgc-0001 move_to_bf-deportes">Deportes</div>
               <div class="std_line_44px_left padding_left_10px bgc-0001 move_to_bf-cultura">Cultura</div>
               <div class="std_line_44px_left padding_left_10px bgc-0001 move_to_bf-espectaculos">Espectáculos</div>
@@ -303,7 +307,7 @@
               <div class="std_line_44px_left padding_left_10px bgc-0001 move_to_bf-mascotas">Mascotas</div>
               <div class="std_line_44px_left padding_left_10px bgc-0001 move_to_bf-clasificados">Clasificados</div>
               <div class="std_line_44px_left padding_left_10px bgc-0001 move_to_bf-profesionales">Profesionales</div>
-              <div class="std_line_44px_left padding_left_10px bgc-0001 move_to_bf-mediakit">MediaKit</div>
+              <div class="std_line_44px_left padding_left_10px bgc-0001 move_to_bf-mediakit">Media Kit</div>
 
             </div>
 
@@ -320,18 +324,6 @@
             </div>
 
           </div>
-          <div id="policiales" class="swiper-slide box_shadow bgc-0001" data-hash="Policiales" style="">
-
-            <div id="pub_312x92_policiales" class="pub_312x92">
-<a href="https://wa.me/543764274738/?text=Hola%20Red%20Cinco,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img class="cali_whatsapp" src="publicidad_312x92.png" alt="" width="312" height="92"></a>
-            </div>
-
-            <div class="bf_farm_container policiales">
-
-
-            </div>
-
-          </div>
           <div id="nacionales" class="swiper-slide box_shadow bgc-0001" data-hash="Nacionales" style="">
 
             <div id="pub_312x92_nacionales" class="pub_312x92">
@@ -339,6 +331,18 @@
             </div>
 
             <div class="bf_farm_container nacionales">
+
+
+            </div>
+
+          </div>
+          <div id="mundo" class="swiper-slide box_shadow bgc-0001" data-hash="Mundo" style="">
+
+            <div id="pub_312x92_mundo" class="pub_312x92">
+<a href="https://wa.me/543764274738/?text=Hola%20Red%20Cinco,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img class="cali_whatsapp" src="publicidad_312x92.png" alt="" width="312" height="92"></a>
+            </div>
+
+            <div class="bf_farm_container mundo">
 
 
             </div>
@@ -363,6 +367,18 @@
             </div>
 
             <div class="bf_farm_container misiones">
+
+
+            </div>
+
+          </div>
+          <div id="policiales" class="swiper-slide box_shadow bgc-0001" data-hash="Policiales" style="">
+
+            <div id="pub_312x92_policiales" class="pub_312x92">
+<a href="https://wa.me/543764274738/?text=Hola%20Red%20Cinco,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img class="cali_whatsapp" src="publicidad_312x92.png" alt="" width="312" height="92"></a>
+            </div>
+
+            <div class="bf_farm_container policiales">
 
 
             </div>
@@ -490,14 +506,45 @@
           </div>
           <div id="info" class="swiper-slide box_shadow bgc-0001" data-hash="Info" style="">
 
-            <div>
-              Hola! somos diario red cinco, querés publicar un aviso? o contarnos un hecho noticioso de tu barrio o ciudad? escribinos a <a href="mailto:diaroredcinco@gmail.com">diaroredcinco@gmail.com</a>
+            <div class="info_div_outer">
+              <div class="info_div_inner">
+                <br>
+              Hola! somos diario red cinco.
+              <br>
+              <br>
+              Querés publicar un aviso?
+              <br>
+              <br>
+              O contarnos un hecho noticioso
+              <br>
+              de tu barrio o ciudad?
+              <br>
+              <br>
+              Escribinos a <a href="mailto:diaroredcinco@gmail.com">diaroredcinco@gmail.com</a>
+              <br>
+              </div>
             </div>
+            <br>
+            <div class="rc_social">
+              <span class="rc_whatsapp">
+                <a href="https://wa.me/543764274738/?text=Hola%20Red%20Cinco,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img class="cali_whatsapp" src="_whatsapp_logo.png" alt="" width="44" height="44"></a>
+              </span>
+                  <span class="rc_instagram">
+                    <a href="https://www.instagram.com/DiarioRedCinco/"><img class="cali_whatsapp" src="_instagram_logo.png" alt="" width="44" height="44"></a>
+                  </span>
+                  <span class="rc_facebook">
+                    <a href="https://www.facebook.com/DiarioRedCinco/"><img class="cali_whatsapp" src="_facebook_logo.png" alt="" width="44" height="44"></a>
+                  </span>
+                  <span class="rc_twitter">
+                    <a href="https://twitter.com/DiarioRedCinco"><img class="cali_whatsapp" src="_twitter_logo.png" alt="" width="44" height="44"></a>
+                  </span>
+                  <span class="rc_youtube">
+                    <a href="https://www.facebook.com/RedCincoDiario/"><img class="cali_whatsapp" src="_youtube_logo.png" alt="" width="44" height="44"></a>
+                  </span>
+                </div>
 
-            <div class="bf_farm_container info">
 
 
-            </div>
 
           </div>
 
@@ -516,13 +563,13 @@
     <a href="https://wa.me/543764274738/?text=Hola%20Red%20Cinco,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img class="cali_whatsapp" src="_whatsapp_logo.png" alt="" width="44" height="44"></a>
   </span>
       <span class="rc_instagram">
-        <a href="https://www.facebook.com/RedCincoDiario/"><img class="cali_whatsapp" src="_instagram_logo.png" alt="" width="44" height="44"></a>
+        <a href="https://www.instagram.com/DiarioRedCinco/"><img class="cali_whatsapp" src="_instagram_logo.png" alt="" width="44" height="44"></a>
       </span>
       <span class="rc_facebook">
-        <a href="https://www.facebook.com/RedCincoDiario/"><img class="cali_whatsapp" src="_facebook_logo.png" alt="" width="44" height="44"></a>
+        <a href="https://www.facebook.com/DiarioRedCinco/"><img class="cali_whatsapp" src="_facebook_logo.png" alt="" width="44" height="44"></a>
       </span>
       <span class="rc_twitter">
-        <a href="https://www.facebook.com/RedCincoDiario/"><img class="cali_whatsapp" src="_twitter_logo.png" alt="" width="44" height="44"></a>
+        <a href="https://twitter.com/DiarioRedCinco"><img class="cali_whatsapp" src="_twitter_logo.png" alt="" width="44" height="44"></a>
       </span>
       <span class="rc_youtube">
         <a href="https://www.facebook.com/RedCincoDiario/"><img class="cali_whatsapp" src="_youtube_logo.png" alt="" width="44" height="44"></a>
