--- a/index.html
+++ b/index.html
@@ -1,120 +1,83 @@
-<html>
-<!-- Red Cinco v0.04 -->
-<!-- combine & minify JS here: https://www.sitelocity.com/critical-path-css-generator -->
-<!-- combine & minify JS here: https://jscompress.com/ -->
-
+<!DOCTYPE HTML>
+<html lang="es-AR" prefix="og: http://ogp.me/ns#" itemscope itemtype="http://schema.org/DefinedTerm">
 <head>
-  <!-- Essential -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
+  <meta content="no" name="msapplication-tap-highlight">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link href="/favicon-32x32.png?v=057" rel="icon" sizes="32x32" type="image/png">
+  <link href="/favicon-194x194.png?v=057" rel="icon" sizes="194x194" type="image/png">
+  <link href="/android-chrome-192x192.png?v=057" rel="icon" sizes="192x192" type="image/png">
+  <link href="/favicon-16x16.png?v=057" rel="icon" sizes="16x16" type="image/png">
+  <link href="/site.webmanifest?v=057" rel="manifest">
+  <link href="/safari-pinned-tab.svg?v=057" rel="mask-icon">
+  <link href="/favicon.ico?v=057" rel="shortcut icon">
+  <meta content="DiarioRedCinco.com" name="apple-mobile-web-app-title">
+  <meta content="DiarioRedCinco.com" name="application-name">
+  <meta content="/mstile-144x144.png?v=057" name="msapplication-TileImage">
+  <link href="/apple-icon-57x57.png?v=057" rel="apple-touch-icon" sizes="57x57">
+  <link href="/apple-icon-60x60.png?v=057" rel="apple-touch-icon" sizes="60x60">
+  <link href="/apple-icon-72x72.png?v=057" rel="apple-touch-icon" sizes="72x72">
+  <link href="/apple-icon-76x76.png?v=057" rel="apple-touch-icon" sizes="76x76">
+  <link href="/apple-icon-114x114.png?v=057" rel="apple-touch-icon" sizes="114x114">
+  <link href="/apple-icon-120x120.png?v=057" rel="apple-touch-icon" sizes="120x120">
+  <link href="/apple-icon-144x144.png?v=057" rel="apple-touch-icon" sizes="144x144">
+  <link href="/apple-icon-152x152.png?v=057" rel="apple-touch-icon" sizes="152x152">
+  <link href="/favicon-96x96.png?v=057" rel="icon" sizes="96x96" type="image/png">
+  <link href="/manifest.json?v=057" rel="manifest">
+  <link href="/apple-touch-icon-57x57.png?v=057" rel="apple-touch-icon-precomposed" sizes="57x57">
+  <link href="/apple-touch-icon-114x114.png?v=057" rel="apple-touch-icon-precomposed" sizes="114x114">
+  <link href="/apple-touch-icon-72x72.png?v=057" rel="apple-touch-icon-precomposed" sizes="72x72">
+  <link href="/apple-touch-icon-144x144.png?v=057" rel="apple-touch-icon-precomposed" sizes="144x144">
+  <link href="/apple-touch-icon-60x60.png?v=057" rel="apple-touch-icon-precomposed" sizes="60x60">
+  <link href="/apple-touch-icon-120x120.png?v=057" rel="apple-touch-icon-precomposed" sizes="120x120">
+  <link href="/apple-touch-icon-76x76.png?v=057" rel="apple-touch-icon-precomposed" sizes="76x76">
+  <link href="/apple-touch-icon-152x152.png?v=057" rel="apple-touch-icon-precomposed" sizes="152x152">
+  <link href="/favicon-196x196.png?v=057" rel="icon" sizes="196x196" type="image/png">
+  <link href="/favicon-96x96.png?v=057" rel="icon" sizes="96x96" type="image/png">
+  <link href="/favicon-32x32.png?v=057" rel="icon" sizes="32x32" type="image/png">
+  <link href="/favicon-16x16.png?v=057" rel="icon" sizes="16x16" type="image/png">
+  <link href="/favicon-128.png?v=057" rel="icon" sizes="128x128" type="image/png">
+  <meta content="DiarioRedCinco.com" name="application-name">
+  <meta content="/mstile-144x144.png?v=057" name="msapplication-TileImage">
+  <meta content="/mstile-70x70.png?v=057" name="msapplication-square70x70logo">
+  <meta content="/mstile-150x150.png?v=057" name="msapplication-square150x150logo">
+  <meta content="/mstile-310x150.png?v=057" name="msapplication-wide310x150logo">
+  <meta content="/mstile-310x310.png?v=057" name="msapplication-square310x310logo">
+  <meta content="summary_large_image" name="twitter:card">
+  <meta content="📰 Red Cinco Diario Digital ▶ 123456789 123456789 1234567" name="twitter:title">
+  <meta content="Your sharing code is programmed, so when sharing Scripture, your posts will be personalized as: Shared with ❤ by _YourNameHere_." name="twitter:description">
+  <meta content="@DiarioRedCinco" name="twitter:site">
+  <meta content="@DiarioRedCinco" name="twitter:creator">
+  <meta content="https://www.diarioredcinco.com/rc_logo_big.jpeg" name="twitter:image:src">
+  <meta content="Your sharing code is programmed, so when sharing Scripture, your posts will be personalized as: Shared with ❤ by _YourNameHere_." name="twitter:image:alt">
+  <meta content="📰 Red Cinco Diario Digital ▶ 123456789 123456789 1234567" property="og:title">
+  <meta content="Your sharing code is programmed, so when sharing Scripture, your posts will be personalized as: Shared with ❤ by _YourNameHere_." property="og:description">
+  <meta content="https://www.diarioredcinco.com/rc_logo_big.jpeg" property="og:image">
+  <meta content="image/jpeg" property="og:image:type">
+  <meta content="1200" property="og:image:width">
+  <meta content="630" property="og:image:height">
+  <meta content="https://www.diarioredcinco.com/" property="og:url">
+  <meta content="📰 Red Cinco Diario Digital ▶ 123456789 123456789 1234567" property="og:site_name">
+  <meta content="es_AR" property="og:locale">
+  <meta content="" property="fb:admins">
+  <meta content="" property="fb:app_id">
+  <meta content="website" property="og:type">
+  <meta content="" name="p:domain_verify">
+  <link href="images/torah_farm_launch_screen_640x1136.png" rel="apple-touch-startup-image">
+  <meta content="#f00" name="msapplication-navbutton-color">
+  <meta content="Your sharing code is programmed, so when sharing Scripture, your posts will be personalized as: Shared with ❤ by _YourNameHere_." name="description">
+  <meta content="https://www.diarioredcinco.com/rc_logo_big.jpeg" name="image">
 
-  <!-- Disable tap highlight on IE -->
-  <meta name="msapplication-tap-highlight" content="no">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 
-  <!-- ////////////////////////// -->
-  <!-- BEGIN Favicons https://realfavicongenerator.net -->
-  <!-- ////////////////////////// -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=058">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=058">
-  <link rel="icon" type="image/png" sizes="194x194" href="/favicon-194x194.png?v=058">
-  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png?v=058">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=058">
-  <link rel="manifest" href="/site.webmanifest?v=058">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg?v=058" color="#000000">
-  <link rel="shortcut icon" href="/favicon.ico?v=058">
-  <meta name="apple-mobile-web-app-title" content="BibleFarm.org">
-  <meta name="application-name" content="BibleFarm.org">
-  <meta name="msapplication-TileColor" content="#000000">
-  <meta name="msapplication-TileImage" content="/mstile-144x144.png?v=058">
-  <meta name="theme-color" content="#000000">
-  <!-- ////////////////////////// -->
-  <!-- END Favicons https://realfavicongenerator.net -->
-  <!-- ////////////////////////// -->
 
-  <!-- ////////////////////////// -->
-  <!-- BEGIN Favicon-generator.org -->
-  <!-- ////////////////////////// -->
-  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png?v=058">
-  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png?v=058">
-  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png?v=058">
-  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png?v=058">
-  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png?v=058">
-  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png?v=058">
-  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png?v=058">
-  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png?v=058">
-
-  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png?v=058">
-
-  <link rel="manifest" href="/manifest.json?v=058">
-  <!-- ////////////////////////// -->
-  <!-- END Favicon-generator.org -->
-  <!-- ////////////////////////// -->
-
-  <!-- ////////////////////////// -->
-  <!-- BEGIN http://www.favicomatic.com -->
-  <!-- ////////////////////////// -->
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/apple-touch-icon-57x57.png?v=058" />
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/apple-touch-icon-114x114.png?v=058" />
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/apple-touch-icon-72x72.png?v=058" />
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144x144.png?v=058" />
-  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="/apple-touch-icon-60x60.png?v=058" />
-  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/apple-touch-icon-120x120.png?v=058" />
-  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="/apple-touch-icon-76x76.png?v=058" />
-  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/apple-touch-icon-152x152.png?v=058" />
-  <link rel="icon" type="image/png" href="/favicon-196x196.png?v=058" sizes="196x196" />
-  <link rel="icon" type="image/png" href="/favicon-96x96.png?v=058" sizes="96x96" />
-  <link rel="icon" type="image/png" href="/favicon-32x32.png?v=058" sizes="32x32" />
-  <link rel="icon" type="image/png" href="/favicon-16x16.png?v=058" sizes="16x16" />
-  <link rel="icon" type="image/png" href="/favicon-128.png?v=058" sizes="128x128" />
-  <meta name="application-name" content="BibleFarm.org" />
-  <meta name="msapplication-TileColor" content="#000000" />
-  <meta name="msapplication-TileImage" content="/mstile-144x144.png?v=058" />
-  <meta name="msapplication-square70x70logo" content="/mstile-70x70.png?v=058" />
-  <meta name="msapplication-square150x150logo" content="/mstile-150x150.png?v=058" />
-  <meta name="msapplication-wide310x150logo" content="/mstile-310x150.png?v=058" />
-  <meta name="msapplication-square310x310logo" content="/mstile-310x310.png?v=058" />
-  <!-- ////////////////////////// -->
-  <!-- END http://www.favicomatic.com -->
-  <!-- ////////////////////////// -->
-
-  <!--DONE  Twitter card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="be a part of the BibleFarm.org team">
-  <meta name="twitter:description" content="fulfilling Mat 25:31-40 one visit at a time">
-  <meta name="twitter:site" content="@biblefarm">
-  <meta name="twitter:creator" content="@biblefarm">
-  <meta name="twitter:image:src" content="https://www.biblefarm.org/_BibleFarm_og_image_1200x630_2019_02_03.png">
-  <meta name="twitter:image:alt" content="be a part of the BibleFarm.org team">
-
-  <!-- DONE Open Graph -->
-  <meta property="og:title" content="be a part of the BibleFarm.org team" />
-  <meta property="og:description" content="fulfilling Mat 25:31-40 one visit at a time" />
-  <meta property="og:image" content="https://www.biblefarm.org/_BibleFarm_og_image_1200x630_2019_02_03.png" />
-  <meta property="og:image:secure_url" content="https://www.biblefarm.org/_BibleFarm_og_image_1200x630_2019_02_03.png" />
-  <meta property="og:image:type" content="image/jpeg" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
-  <meta property="og:url" content="https://www.biblefarm.org/" />
-  <meta property="og:site_name" content="BibleFarm.org - fulfilling Mat 25:31-40 one visit at a time" />
-  <meta property="og:locale" content="en_US" />
-  <meta property="fb:admins" content="356077414586259" />
-  <meta property="fb:app_id" content="205604789951385" />
-  <meta property="og:type" content="website" />
-  <meta name="p:domain_verify" content="e3f86f5a3fa4999b9c17c1605383d4a8" />
-
-  <!-- Pinterest  -->
-  <!-- https://css-tricks.com/using-pinterest-data-attributes-and-meta-tags/ -->
-
-  <link rel="apple-touch-startup-image" href="images/torah_farm_launch_screen_640x1136.png">
-
-  <meta name="theme-color" content="#f00">
-  <meta name="msapplication-navbutton-color" content="#f00">
-  <meta name="description" content="fulfilling Mat 25:31-40 one visit at a time">
-  <meta name="image" content="https://www.biblefarm.org/_BibleFarm_og_image_1200x630.png">
-  <meta itemprop="name" content="be a part of the BibleFarm.org team">
-  <meta itemprop="description" content="fulfilling Mat 25:31-40 one visit at a time">
-  <meta itemprop="image" content="https://www.biblefarm.org/_BibleFarm_og_image_1200x630.png">
 
   <title>Red Cinco Diario Digital</title>
   <!-- ////////////////////////// -->
