--- a/index.html
+++ b/index.html
@@ -5,17 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
   <meta content="no" name="msapplication-tap-highlight">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link href="/favicon-32x32.png?v=057" rel="icon" sizes="32x32" type="image/png">
   <link href="/favicon-194x194.png?v=057" rel="icon" sizes="194x194" type="image/png">
-  <link href="/android-chrome-192x192.png?v=057" rel="icon" sizes="192x192" type="image/png">
-  <link href="/favicon-16x16.png?v=057" rel="icon" sizes="16x16" type="image/png">
-  <link href="/site.webmanifest?v=057" rel="manifest">
-  <link href="/safari-pinned-tab.svg?v=057" rel="mask-icon">
   <link href="/favicon.ico?v=057" rel="shortcut icon">
   <meta content="DiarioRedCinco.com" name="apple-mobile-web-app-title">
   <meta content="DiarioRedCinco.com" name="application-name">
-  <meta content="/mstile-144x144.png?v=057" name="msapplication-TileImage">
   <link href="/apple-icon-57x57.png?v=057" rel="apple-touch-icon" sizes="57x57">
   <link href="/apple-icon-60x60.png?v=057" rel="apple-touch-icon" sizes="60x60">
   <link href="/apple-icon-72x72.png?v=057" rel="apple-touch-icon" sizes="72x72">
@@ -36,11 +29,8 @@
   <link href="/apple-touch-icon-152x152.png?v=057" rel="apple-touch-icon-precomposed" sizes="152x152">
   <link href="/favicon-196x196.png?v=057" rel="icon" sizes="196x196" type="image/png">
   <link href="/favicon-96x96.png?v=057" rel="icon" sizes="96x96" type="image/png">
-  <link href="/favicon-32x32.png?v=057" rel="icon" sizes="32x32" type="image/png">
-  <link href="/favicon-16x16.png?v=057" rel="icon" sizes="16x16" type="image/png">
   <link href="/favicon-128.png?v=057" rel="icon" sizes="128x128" type="image/png">
   <meta content="DiarioRedCinco.com" name="application-name">
-  <meta content="/mstile-144x144.png?v=057" name="msapplication-TileImage">
   <meta content="/mstile-70x70.png?v=057" name="msapplication-square70x70logo">
   <meta content="/mstile-150x150.png?v=057" name="msapplication-square150x150logo">
   <meta content="/mstile-310x150.png?v=057" name="msapplication-wide310x150logo">
@@ -70,11 +60,14 @@
   <meta content="Your sharing code is programmed, so when sharing Scripture, your posts will be personalized as: Shared with ❤ by _YourNameHere_." name="description">
   <meta content="https://www.diarioredcinco.com/rc_logo_big.jpeg" name="image">
 
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-TileColor" content="#2d89ef">
+  <meta name="msapplication-TileImage" content="/mstile-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
 
