--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
   <meta content="/mstile-310x150.png?v=057" name="msapplication-wide310x150logo">
   <meta content="/mstile-310x310.png?v=057" name="msapplication-square310x310logo">
   <meta content="summary_large_image" name="twitter:card">
-  <meta content="📰 Red Cinco Diario Digital ▶ 123456789 123456789 1234567" name="twitter:title">
+  <meta content="📰 Red Cinco Diario Digital ▶ Medio de Comunicación Digital ▶ Contenidos de Calidad ▶ Inmediatez e Interactividad ▶ Somos el nexo exacto" name="twitter:title">
   <meta content="Your sharing code is programmed, so when sharing Scripture, your posts will be personalized as: Shared with ❤ by _YourNameHere_." name="twitter:description">
   <meta content="@DiarioRedCinco" name="twitter:site">
   <meta content="@DiarioRedCinco" name="twitter:creator">
   <meta content="https://www.diarioredcinco.com/rc_logo_big.jpeg" name="twitter:image:src">
   <meta content="Your sharing code is programmed, so when sharing Scripture, your posts will be personalized as: Shared with ❤ by _YourNameHere_." name="twitter:image:alt">
-  <meta content="📰 Red Cinco Diario Digital ▶ 123456789 123456789 1234567" property="og:title">
+  <meta content="📰 Red Cinco Diario Digital ▶ Medio de Comunicación Digital ▶ Contenidos de Calidad ▶ Inmediatez e Interactividad ▶ Somos el nexo exacto" property="og:title">
   <meta content="Your sharing code is programmed, so when sharing Scripture, your posts will be personalized as: Shared with ❤ by _YourNameHere_." property="og:description">
   <meta content="https://www.diarioredcinco.com/rc_logo_big.jpeg" property="og:image">
   <meta content="image/jpeg" property="og:image:type">
   <meta content="1200" property="og:image:width">
   <meta content="630" property="og:image:height">
   <meta content="https://www.diarioredcinco.com/" property="og:url">
-  <meta content="📰 Red Cinco Diario Digital ▶ 123456789 123456789 1234567" property="og:site_name">
+  <meta content="📰 Red Cinco Diario Digital ▶ Medio de Comunicación Digital ▶ Contenidos de Calidad ▶ Inmediatez e Interactividad ▶ Somos el nexo exacto" property="og:site_name">
   <meta content="es_AR" property="og:locale">
   <meta content="" property="fb:admins">
   <meta content="" property="fb:app_id">
@@ -343,7 +343,7 @@
           <div id="deportes" class="swiper-slide box_shadow bgc-0001" data-hash="Deportes" style="">
 
             <div id="pub_312x92_deportes" class="pub_312x92">
-<a href="https://wa.me/543764274738/?text=Hola%20Red%20Cinco,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img class="cali_whatsapp" src="publicidad_312x92.png" alt="" width="312" height="92"></a>
+<a href="https://wa.me/543764274738/?text=Hola%20Red%20Cinco,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img class="cali_whatsapp" src="Ruschel.jpeg" alt="" width="312" height="92"></a>
             </div>
 
             <div class="bf_farm_container deportes">
