--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
           <div id="deportes" class="swiper-slide box_shadow bgc-0001" data-hash="Deportes" style="">
 
             <div id="pub_312x92_deportes" class="pub_312x92">
-<a href="https://wa.me/543764274738/?text=Hola%20Red%20Cinco,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img class="cali_whatsapp" src="Ruschel.jpeg" alt="" width="312" height="92"></a>
+<a href="https://wa.me/543764274738/?text=Hola%20Red%20Cinco,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img class="cali_whatsapp" src="ad-Ruschel.jpeg" alt="" width="312" height="92"></a>
             </div>
 
             <div class="bf_farm_container deportes">
