--- a/_standalone_swiper.html
+++ b/_standalone_swiper.html
@@ -73,16 +73,16 @@
     <div class="swiper-wrapper">
 
       <div id="" class="swiper-slide box_shadow bgc-0001" data-hash="menu" style="">
-        <a href="https://wa.me/543764274738/?text=Hola%20Red%20Cinco,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img class="cali_whatsapp" src="ad-Ruschel.jpeg" alt="" width="312" height="92"></a>
+        <a href="https://wa.me/543764274738/?text=Hola!%20Vi%20el%20anuncio%20en%20Red%20Cinco%20Diario%20Digital,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img class="cali_whatsapp" src="ad-Ruschel.jpeg" alt="" width="312" height="92"></a>
       </div>
       <div id="" class="swiper-slide box_shadow bgc-0001" data-hash="menu" style="">
-        <a href="https://wa.me/543764274738/?text=Hola%20Red%20Cinco,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img class="cali_whatsapp" src="ad-Choco_Misio.jpeg" alt="" width="312" height="92"></a>
+        <a href="https://wa.me/543764274738/?text=Hola!%20Vi el anuncio en Red%20Cinco Diario Digital,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img class="cali_whatsapp" src="ad-Choco_Misio.jpeg" alt="" width="312" height="92"></a>
       </div>
       <div id="" class="swiper-slide box_shadow bgc-0001" data-hash="menu" style="">
-        <a href="https://wa.me/543764274738/?text=Hola%20Red%20Cinco,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img class="cali_whatsapp" src="ad-Centro_de_Obesidad_Misiones.jpeg" alt="" width="312" height="92"></a>
+        <a href="https://wa.me/543765005211/?text=Hola!%20Vi el anuncio en Red%20Cinco Diario Digital,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img class="cali_whatsapp" src="ad-Centro_de_Obesidad_Misiones.jpeg" alt="" width="312" height="92"></a>
       </div>
       <div id="" class="swiper-slide box_shadow bgc-0001" data-hash="menu" style="">
-        <a href="https://wa.me/543764274738/?text=Hola%20Red%20Cinco,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img class="cali_whatsapp" src="ad-Espacio_Welness.jpeg" alt="" width="312" height="92"></a>
+        <a href="https://wa.me/543764274738/?text=Hola!%20Vi el anuncio en Red%20Cinco Diario Digital,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img class="cali_whatsapp" src="ad-Espacio_Welness.jpeg" alt="" width="312" height="92"></a>
       </div>
 
     </div>
