--- a/_standalone_swiper.html
+++ b/_standalone_swiper.html
@@ -53,7 +53,7 @@
 -->
 
 <style>
-.wrap_swiper_ads-general {
+.wrap_swiper_ads-deportes {
   position: absolute;
   display: block;
   width: 312px;
@@ -66,9 +66,9 @@
 
 <body>
 
-  <div class="wrap_swiper_ads-general">
+  <div class="wrap_swiper_ads-deportes">
 
-    <div class="swiper-container swiper_ads-general">
+    <div class="swiper-container swiper_ads-deportes">
 
     <div class="swiper-wrapper">
 
@@ -100,9 +100,9 @@
 <script>
   $(document).ready(function() {
   //////////////////////////////////
-  ///// BEGIN swiper bf navigation /
+  ///// BEGIN swiper deportes /
   //////////////////////////////////
-    var swiper_ads_general = new Swiper(".swiper_ads-general", {
+    var swiper_ads_deportes = new Swiper(".swiper_ads-deportes", {
       effect: 'fade',
 autoplay: 2500,
 autoplayDisableOnInteraction: false,
@@ -145,6 +145,9 @@ autoplayDisableOnInteraction: false,
       nextButton: ".swiper-button-next",
       prevButton: ".swiper-button-prev"
     });
+    //////////////////////////////////
+    ///// END swiper deportes /
+    //////////////////////////////////
 
   }); // end document ready
 </script>
