--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
   <meta content="/mstile-310x310.png?v=057" name="msapplication-square310x310logo">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="📰 Red Cinco Diario Digital ▶ Medio de Comunicación Digital ▶ Contenidos de Calidad ▶ Inmediatez e Interactividad ▶ Somos el nexo exacto" name="twitter:title">
-  <meta content="Your sharing code is programmed, so when sharing Scripture, your posts will be personalized as: Shared with ❤ by _YourNameHere_." name="twitter:description">
+  <meta content="Contenidos de Calidad ▶ Inmediatez e Interactividad ▶ Somos el nexo exacto." name="twitter:description">
   <meta content="@DiarioRedCinco" name="twitter:site">
   <meta content="@DiarioRedCinco" name="twitter:creator">
-  <meta content="https://www.diarioredcinco.com/rc_logo_big.jpeg" name="twitter:image:src">
-  <meta content="Your sharing code is programmed, so when sharing Scripture, your posts will be personalized as: Shared with ❤ by _YourNameHere_." name="twitter:image:alt">
+  <meta content="https://www.diarioredcinco.com/rc_logo_twitter_card_1200_630.png" name="twitter:image:src">
+  <meta content="📰 Red Cinco Diario Digital ▶ Medio de Comunicación Digital ▶ Contenidos de Calidad ▶ Inmediatez e Interactividad ▶ Somos el nexo exacto." name="twitter:image:alt">
   <meta content="📰 Red Cinco Diario Digital ▶ Medio de Comunicación Digital ▶ Contenidos de Calidad ▶ Inmediatez e Interactividad ▶ Somos el nexo exacto" property="og:title">
-  <meta content="Your sharing code is programmed, so when sharing Scripture, your posts will be personalized as: Shared with ❤ by _YourNameHere_." property="og:description">
+  <meta content="📰 Red Cinco Diario Digital ▶ Medio de Comunicación Digital ▶ Contenidos de Calidad ▶ Inmediatez e Interactividad ▶ Somos el nexo exacto." property="og:description">
   <meta content="https://www.diarioredcinco.com/rc_logo_big.jpeg" property="og:image">
   <meta content="image/jpeg" property="og:image:type">
   <meta content="1200" property="og:image:width">
@@ -55,9 +55,9 @@
   <meta content="" property="fb:app_id">
   <meta content="website" property="og:type">
   <meta content="" name="p:domain_verify">
-  <link href="images/torah_farm_launch_screen_640x1136.png" rel="apple-touch-startup-image">
+  <link href="https://www.diarioredcinco.com/rc_logo_big.jpeg" rel="apple-touch-startup-image">
   <meta content="#f00" name="msapplication-navbutton-color">
-  <meta content="Your sharing code is programmed, so when sharing Scripture, your posts will be personalized as: Shared with ❤ by _YourNameHere_." name="description">
+  <meta content="Red Cinco Diario Digital ▶ Medio de Comunicación Digital ▶ Contenidos de Calidad ▶ Inmediatez e Interactividad ▶ Somos el nexo exacto." name="description">
   <meta content="https://www.diarioredcinco.com/rc_logo_big.jpeg" name="image">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -130,7 +130,7 @@
 -->
 
   <!-- Pinterest pin this image -->
-  <img class="pinterest_pin_this_image" src="https://www.biblefarm.org/_BibleFarm_og_image_1200x630.png" data-pin-url="https://www.biblefarm.org/" data-pin-description="BibleFarm.org is a group of Bible doers donate & provide better nutrition for these kids. The team delivers clothes, shoes & we teach these children to put all their trust in Jesus (John 1:12), share (1John 3:17), apologize (Mat. 5:24) & forgive. #biblefarm">
+  <img class="pinterest_pin_this_image" src="https://www.diarioredcinco.com/rc_logo_twitter_card_1200_630.png" data-pin-url="https://www.diarioredcinco.com/" data-pin-description="📰 Red Cinco Diario Digital ▶ Medio de Comunicación Digital ▶ Contenidos de Calidad ▶ Inmediatez e Interactividad ▶ Somos el nexo exacto">
 
   <!-- BEGIN BibleFarm.org website intro -->
   <div class="bf_lock_n_load_wrap">
@@ -279,7 +279,7 @@
                               <div class="swiper-wrapper">
 
                                 <div id="" class="swiper-slide box_shadow bgc-0001" style="">
-                                  <a href="https://wa.me/543764274738/?text=Hola!%20Vi%20el%20anuncio%20en%20Red%20Cinco%20Diario%20Digital,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img src="ad-Ruschel.jpeg" alt="" width="312" height="92"></a>
+                                  <a href="https://wa.me/595994857838/?text=Hola!%20Vi%20el%20anuncio%20en%20Red%20Cinco%20Diario%20Digital,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img src="ad-Ruschel.jpeg" alt="" width="312" height="92"></a>
                                 </div>
                                 <div id="" class="swiper-slide box_shadow bgc-0001" style="">
                                   <a href="https://wa.me/543764274738/?text=Hola!%20Vi%20el%20anuncio%20en%20Red%20Cinco%20Diario%20Digital,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img src="ad-Choco_Misio.jpeg" alt="" width="312" height="92"></a>
@@ -294,10 +294,13 @@
                                   <a href="https://wa.me/543764274738/?text=Hola!%20Vi%20el%20anuncio%20en%20Red%20Cinco%20Diario%20Digital,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img src="ad-Herencia_Custom_Garage.jpeg" alt="" width="312" height="92"></a>
                                 </div>
                                 <div id="" class="swiper-slide box_shadow bgc-0001" style="">
-                                  <a href="https://wa.me/543764274738/?text=Hola!%20Vi%20el%20anuncio%20en%20Red%20Cinco%20Diario%20Digital,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img src="ad-El_Paraiso_de_Lole.jpeg" alt="" width="312" height="92"></a>
+                                  <a href="https://wa.me/5493764245747/?text=Hola!%20Vi%20el%20anuncio%20en%20Red%20Cinco%20Diario%20Digital,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img src="ad-El_Paraiso_de_Lole.jpeg" alt="" width="312" height="92"></a>
                                 </div>
                                 <div id="" class="swiper-slide box_shadow bgc-0001" style="">
-                                  <a href="https://wa.me/543764274738/?text=Hola!%20Vi%20el%20anuncio%20en%20Red%20Cinco%20Diario%20Digital,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img src="publicidad_312x92.png" alt="" width="312" height="92"></a>
+                                  <a href="https://wa.me/543764274738/?text=Hola!%20Vi%20el%20anuncio%20en%20Red%20Cinco%20Diario%20Digital,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img src="ad-Turismo_Valle_Hermoso.jpeg" alt="" width="312" height="92"></a>
+                                </div>
+                                <div id="" class="swiper-slide box_shadow bgc-0001" style="">
+                                  <a href="https://wa.me/543764222333/?text=Hola!%20Vi%20el%20anuncio%20en%20Red%20Cinco%20Diario%20Digital,%20queria%20hacer%20una%20consulta.%20Mi%20nombre%20es:%20"><img src="publicidad_312x92.png" alt="" width="312" height="92"></a>
                                 </div>
 
                               </div>
