--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <meta content="@DiarioRedCinco" name="twitter:site">
   <meta content="@DiarioRedCinco" name="twitter:creator">
   <meta content="https://www.diarioredcinco.com/rc_logo_twitter_card_1200_630.png" name="twitter:image:src">
-  <meta content="📰 Red Cinco Diario Digital ▶ Medio de Comunicación Digital ▶ Contenidos de Calidad ▶ Inmediatez e Interactividad ▶ Somos el nexo exacto." name="twitter:image:alt">
+  <meta content="📰 Red Cinco Diario Digital ▶ Medio de Comunicación Digital ▶ Contenidos de Calidad ▶ Inmediatez e Interactividad ▶ Somos el nexo exacto" name="twitter:image:alt">
   <meta content="📰 Red Cinco Diario Digital ▶ Medio de Comunicación Digital ▶ Contenidos de Calidad ▶ Inmediatez e Interactividad ▶ Somos el nexo exacto" property="og:title">
   <meta content="📰 Red Cinco Diario Digital ▶ Medio de Comunicación Digital ▶ Contenidos de Calidad ▶ Inmediatez e Interactividad ▶ Somos el nexo exacto." property="og:description">
   <meta content="https://www.diarioredcinco.com/rc_logo_big.jpeg" property="og:image">
